resolve ui issues

--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -2866,7 +2866,10 @@
   h1.category-heading{
     @include font(32px,46px,400);                
   } 
-  .view-category-wise-content-list, .view-blog-listing, .page-podcasts-listing .view-podcasts-listing{           
+  .view-category-wise-content-list, 
+  .view-blog-listing, 
+  .page-podcast .view-podcasts-listing,           
+  .page-podcasts-listing .view-podcasts-listing{           
     .catagory-listing{        
       .pic{
         width: 170px; 
