--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -1778,6 +1778,7 @@ $debug: "width:645px"; // TODO: move to _settings.scss
       background-color: #000;
       float: left;
       width: 100%;
+      height: 74px;
       overflow: hidden;
       h2{
         color: #fff;
@@ -1842,6 +1843,7 @@ $debug: "width:645px"; // TODO: move to _settings.scss
     padding: 10px 0 0;
     max-height: 115px;
     overflow-y: auto;
+    margin-top: 0;
   }
   .poll-wrapper .poll-data .poll-replace-id .past-poll li:last-child,
   .poll-wrapper .poll-data .poll-replace-id .past-poll li{
