--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -13799,6 +13799,116 @@ span.close_btt {
   display: none;
 }
 
+.page-videogallery-embed, .page-photogallery-embed {
+  background-color: #171717;
+}
+
+.itg-embed-wrapper h1.embed-title {
+  font-size: 32px;
+  margin: 25px 0;
+  color: #fff;
+  text-align: center;
+}
+.itg-embed-wrapper .itg-embed-photo-wrapper {
+  padding: 10px;
+  background-color: #000;
+  max-width: 773px;
+  margin: 0 auto;
+  width: 100%;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb {
+  margin-top: 10px;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb .slick-slide {
+  outline: none;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb img {
+  width: 88px;
+  max-width: 100%;
+  height: 66px;
+  border: 1px solid #000;
+  outline: none;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb .slick-current img {
+  border-color: #fff;
+}
+.itg-embed-wrapper .embed-desc {
+  color: #fff;
+  padding: 5px 0 0;
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-next, .itg-embed-wrapper .itg-embed-photo-slider .slick-prev {
+  cursor: pointer;
+  width: 50px;
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.3);
+  font-size: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  z-index: 9;
+  border: none;
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-next {
+  border-radius: 90px 0px 0px 90px;
+  right: 0;
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-prev {
+  border-radius: 0 90px 90px 0;
+  left: 0;
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-prev:hover, .itg-embed-wrapper .itg-embed-photo-slider .slick-next:hover {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-next:before, .itg-embed-wrapper .itg-embed-photo-slider .slick-prev:before {
+  font: normal normal normal 32px/100px FontAwesome;
+  position: absolute;
+  top: 0;
+  color: #666;
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-next:before {
+  content: '\f054';
+  right: 5px;
+}
+.itg-embed-wrapper .itg-embed-photo-slider .slick-prev:before {
+  content: '\f053';
+  left: 5px;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider {
+  padding: 0 40px;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-next, .itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-prev {
+  cursor: pointer;
+  width: 40px;
+  height: 66px;
+  font-size: 0;
+  position: absolute;
+  top: 0;
+  z-index: 9;
+  border: none;
+  background-color: #000;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-next {
+  left: 0;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-prev {
+  right: 0;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-next:before, .itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-prev:before {
+  font: normal normal normal 32px/66px FontAwesome;
+  position: absolute;
+  top: 0;
+  color: #fff;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-next:before {
+  content: '\f053';
+  left: 10px;
+}
+.itg-embed-wrapper .itg-embed-photo-thumb-slider .slick-prev:before {
+  content: '\f054';
+  right: 10px;
+}
+
 @media (min-width: 768px) {
   .modal-dialog {
     width: 960px;
