--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11315,6 +11315,8 @@ span.close_btt {
     color: green;
 }
 .widget-help-text{display: none;}
+
+/* CSS For embedded code */
 .page-videogallery-embed, .page-photogallery-embed{background-color: #171717;}
 .itg-embed-wrapper{
   h1.embed-title{font-size: 32px; margin: 25px 0; color: #fff; text-align: center;}
@@ -11385,6 +11387,9 @@ span.close_btt {
   .itg-embed-photo-thumb-slider .slick-next:before{content: '\f053'; left: 10px;}
   .itg-embed-photo-thumb-slider .slick-prev:before{content: '\f054'; right: 10px;}
 }
+
+/* End Of CSS */
+.api-grid > div{display: inline-block; vertical-align: top;}
 
 
 
