--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -85,6 +85,9 @@ img{
 .mb-10{
     margin-bottom: 10px;
 }
+.mb-20{
+  margin-bottom: 20px;
+}
 .mb-5{
     margin-bottom: 5px;
 }
@@ -166,6 +169,9 @@ img{
 }
 .m-bottom40{
     margin-bottom: 40px;
+}
+.media__video--responsive{
+  z-index: 4;
 }
 .zoom-image {
   overflow: hidden;
