--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11396,6 +11396,11 @@ span.close_btt {
 
 /* End Of CSS */
 .api-grid > div{display: inline-block; vertical-align: top;}
+.page-quiz-user-list{
+  table{
+    @include personalization-table;
+  }
+}
 
 
 
