ITG-3553 #time 1h #comment asterisk added.

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12485,3 +12485,8 @@ div#edit-byline-names-wrapper {
   margin: 0;
   padding: 0 !important;
 }
+
+.tag-box-input-date span.error {
+  font-size: 12px;
+  margin-top: -10px;
+}
