--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11800,3 +11800,9 @@ span.file a{pointer-events: none; color: #2f2f2f;}
     }
   }
 }
+.tag-box-input-date{
+  span.error{
+    font-size: 12px;
+    margin-top: -10px;
+  }
+}
