--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3192,7 +3192,7 @@
     height: 37px; overflow: hidden;
   }
   body.page-taxonomy-term{
-    .row{
+    #main .row{
       overflow: hidden;
     }
   }
