--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -545,16 +545,20 @@ input[type="file"], input[type="submit"], input[type="text"]{
     }
 }
 
-/*$test : .carousel .slides .slideItem;
-$debug: "width:645px"; // TODO: move to _settings.scss
-
-
-    @if ($debug) { // visualizing layout internals
-        display: block;
-    }*/
-
-
-
+.carousel .slides .slideItem.active-slide span{
+  opacity: 1;
+  -webkit-transition: all 500ms ease .2s;
+  -moz-transition: all 500ms ease .2s;
+  -o-transition: all 500ms ease .2s;
+  transition: all 500ms ease .2s;
+}
+.carousel .slides .slideItem.active-slide span.overlay{
+  opacity: 0;
+  -webkit-transition: all 500ms ease .2s;
+  -moz-transition: all 500ms ease .2s;
+  -o-transition: all 500ms ease .2s;
+  transition: all 500ms ease .2s;
+}
 
 /* CSS FOR FRONT USER PERSONALIZATION */
 .personalized-wrapper{
