--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3099,6 +3099,7 @@
         width: 15.5%; 
         padding: 0;
         border-bottom: none;
+        border-right: 1px solid #181818;
         margin-bottom: 0;
         ul{
           display: inherit;
