--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -11669,18 +11669,7 @@ span.file a {
   background: url(../images/controls.png) no-repeat -25px 0px;
 }
 
-[id*="views-exposed-form-browse-content-page"] .views-widget-filter-field_itg_content_publish_date_value {
-  width: 300px !important;
-}
-[id*="views-exposed-form-browse-content-page"] .views-widget-filter-field_itg_content_publish_date_value .views-widget .container-inline-date {
-  clear: none;
-  float: left;
-  width: 49%;
-}
-[id*="views-exposed-form-browse-content-page"] .views-widget-filter-field_itg_content_publish_date_value .views-widget .container-inline-date:first-child {
-  padding-right: 10px;
-}
-[id*="views-exposed-form-browse-content-page"] .views-widget-filter-field_itg_content_publish_date_value .views-widget .container-inline-date label {
+[id*="views-exposed-form-browse-content-page"] [class*="views-widget-filter-field_itg_content_publish_date_value"] .views-widget .container-inline-date label {
   display: none !important;
 }
 
