--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11043,16 +11043,9 @@ span.file a{pointer-events: none; color: #2f2f2f;}
   .form-field-name-field-page-section{@extend .hide;}
 }
 [id*="views-exposed-form-browse-content-page"]{
-  .views-widget-filter-field_itg_content_publish_date_value{
-    width: 300px !important;
+  [class*="views-widget-filter-field_itg_content_publish_date_value"]{
     .views-widget{
       .container-inline-date {
-        clear: none;
-        float: left;       
-        width: 49%;
-        &:first-child{
-           padding-right: 10px;
-        }
         label{display: none !important;}
       }
     }
