--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14004,6 +14004,10 @@ span.close_btt {
   border-right: 1px solid #e0e0e0;
 }
 
+.page-podcast #page-title {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .modal-dialog {
     width: 960px;
