ITG-2785 #time 1h #comment fixed.

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -4269,6 +4269,16 @@ h1.category-heading {
   display: none;
 }
 
+.view-category-wise-content-list .pic {
+  position: relative;
+}
+.view-category-wise-content-list .pic figcaption {
+  position: absolute;
+  bottom: 5px;
+  left: 7px;
+  color: #fff;
+}
+
 .view-blog-listing .catagory-listing .detail .blog-anchor {
   color: #bb0a0a;
 }
@@ -14006,6 +14016,10 @@ span.close_btt {
 
 .page-podcast #page-title {
   display: none;
+}
+
+.nested-taxonomy-tree a:hover {
+  color: #a00606 !important;
 }
 
 @media (min-width: 768px) {
