--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -1764,7 +1764,8 @@
     margin-bottom: 10px;
   }
 
-
+.state-election-map-wrapper .left-chart .graph-design, 
+.state-election-map-wrapper .left-chart .graph-table-wrapper{width: 100%;}
 }
 
 
