--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -456,6 +456,13 @@
     padding-top: 10px;
   }
 }
+@media only screen and (min-width: 991px) and (max-width: 1024px) {
+  .sport-home-layout-page .itg-layout-615 .droppable,
+  .sport-home-layout-page .itg-layout-615 .auto-block-1,
+  .sport-home-layout-page .itg-layout-615 .auto-block-2 {
+    height: 510px;
+  }
+}
 @media only screen and (max-width: 991px) {
   /*CSS start education page special*/
   .education-layout-page .itg-layout-672 .droppable, .education-layout-page .itg-layout-672 .droppable .auto-block-1 {
@@ -597,10 +604,6 @@
 @media only screen and (max-width: 768px) {
   .block-itg-ads {
     overflow: hidden;
-  }
-
-  .widget-wrapper {
-    overflow: initial;
   }
 
   header {
