--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11834,6 +11834,11 @@ fieldset#edit-xmlsitemap{
           border-color: transparent transparent transparent #fff;
         }
       }
+      .form-item-path-pathauto{
+        div.description{
+          right: 108%;
+        }
+      }
     }
   }
 }
