ITG-3518 #time 1h #comment added social share html

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14184,6 +14184,48 @@ span.close_btt {
   width: 3px;
 }
 
+.story-section .story-right .description .social-share.social-share-embed ul {
+  list-style-type: none;
+}
+.story-section .story-right .description .social-share.social-share-embed ul li {
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 8px;
+}
+.story-section .story-right .description .social-share.social-share-embed ul li a, .story-section .story-right .description .social-share.social-share-embed ul li span {
+  background: #000;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  display: block;
+  color: #fff;
+  text-align: center;
+  line-height: 23px;
+  font-size: 15px;
+}
+@media screen and (min-width: 768px) {
+  .story-section .story-right .description .social-share.social-share-embed ul li a, .story-section .story-right .description .social-share.social-share-embed ul li span {
+    width: 23px;
+    height: 23px;
+    line-height: 25px;
+  }
+}
+.story-section .story-right .description .social-share.social-share-embed ul li a.share, .story-section .story-right .description .social-share.social-share-embed ul li span.share {
+  color: #d0d0d0;
+}
+.story-section .story-right .description .social-share.social-share-embed ul li a.share, .story-section .story-right .description .social-share.social-share-embed ul li a.google, .story-section .story-right .description .social-share.social-share-embed ul li span.share, .story-section .story-right .description .social-share.social-share-embed ul li span.google {
+  background: transparent;
+}
+.story-section .story-right .description .social-share.social-share-embed ul li a.facebook, .story-section .story-right .description .social-share.social-share-embed ul li span.facebook {
+  background: #0b4887;
+}
+.story-section .story-right .description .social-share.social-share-embed ul li a.twitter, .story-section .story-right .description .social-share.social-share-embed ul li span.twitter {
+  background: #05a3d2;
+}
+.story-section .story-right .description .social-share.social-share-embed ul li a.google, .story-section .story-right .description .social-share.social-share-embed ul li span.google {
+  background: url(../images/google-icon.jpg) no-repeat center center;
+}
+
 @media (min-width: 768px) {
   .modal-dialog {
     width: 960px;
